# messari-sdk-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/messari_sdk/: __init__.py  client.py  examples.py  exceptions.py  playground.py  registry.py
